Add Product API, Tests and Documentation
