# cmd/web/handlers.go
@@ -17,7 +17,7 @@ import (
 // @Produce      json
 // @Param 		 email body string true "email"
 // @Param 		 password body string true "password"
-// @Success      200  {object}  data.LoginResponseData
+// @Success      200  {object}  data.BuyerLoginResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      401  {object}  data.Message
 // @Failure      500  {object}  data.Message
@@ -51,7 +51,7 @@ func handleBuyerLogin(c *gin.Context) {
 // @Produce      json
 // @Param 		 email body string true "email"
 // @Param 		 password body string true "password"
-// @Success      200  {object}  data.LoginResponseData
+// @Success      200  {object}  data.BuyerLoginResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      500  {object}  data.Message
 // @Router       /buyer/signup/ [post]
@@ -77,17 +77,15 @@ func handleBuyerSignUp(c *gin.Context) {
 }
 
 // handleGetProductById godoc
-// @Summary      Gets a
+// @Summary      Gets a Product by its Product ID
 // @Description  Checks to see if a product with a given id exists and returns its product information if it does.
 // If not it returns a not found error (404)
 // @Produce      json
-// @Param 		 email body string true "email"
-// @Param 		 password body string true "password"
-// @Success      200  {object}  data.LoginResponseData
+// @Success      200  {object}  data.ProductResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      404  {object}  data.Message
 // @Failure      500  {object}  data.Message
-// @Router       /buyer/signup/ [post]
+// @Router       /product/{id}  [get]
 func handleGetProductById(c *gin.Context) {
 	productId := c.Param("id")
 
@@ -106,6 +104,41 @@ func handleGetProductById(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, &product)
+}
+
+// handleCreateProduct godoc
+// @Summary      Creates a new product post
+// @Description  Creates a new product post with the supplied data, if the data is not valid it throws and error
+// @Produce      json
+// @Param 		 seller_id body string true "seller_id"
+// @Param 		 title body string true "title"
+// @Param 		 description body string true "desc"
+// @Param 		 price body int true "price"
+// @Param 		 condition body int true "condition"
+// @Param 		 product_type body string true "product_type"
+// @Success      201  {object}  data.ProductResponseData
+// @Failure      400  {object}  data.Message
+// @Failure      500  {object}  data.Message
+// @Router       /product/create  [post]
+func handleCreateProduct(c *gin.Context) {
+	var createProduct data.ProductCreateData
+	bindErr := c.ShouldBindJSON(&createProduct)
+
+	if bindErr != nil {
+		r := data.Message{Message: "Bad Request Body"}
+		c.JSON(http.StatusBadRequest, r)
+		return
+	}
+
+	product, err := product.CreateProduct(db, createProduct)
+
+	if err != nil {
+		r := data.Message{Message: err.Error()}
+		c.JSON(err.ErrorCode(), r)
+		return
+	}
+
+	c.JSON(http.StatusCreated, &product)
 }
 
 /*
