# docs/swagger.json
@@ -1,8 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is the backend REST API for Aucto's marketplace, it is currently in v1.",
+        "title": "AUCTO Backend API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/buyer/login/": {
             "post": {
@@ -38,7 +43,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.LoginResponseData"
+                            "$ref": "#/definitions/data.BuyerLoginResponseData"
                         }
                     },
                     "400": {
@@ -96,7 +101,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.LoginResponseData"
+                            "$ref": "#/definitions/data.BuyerLoginResponseData"
                         }
                     },
                     "400": {
@@ -105,8 +110,122 @@
                             "$ref": "#/definitions/data.Message"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/data.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/create": {
+            "post": {
+                "description": "Creates a new product post with the supplied data, if the data is not valid it throws and error",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Creates a new product post",
+                "parameters": [
+                    {
+                        "description": "seller_id",
+                        "name": "seller_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "title",
+                        "name": "title",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "desc",
+                        "name": "description",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "price",
+                        "name": "price",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "condition",
+                        "name": "condition",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "product_type",
+                        "name": "product_type",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/data.ProductResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/data.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/data.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/{id}": {
+            "get": {
+                "description": "Checks to see if a product with a given id exists and returns its product information if it does.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Gets a Product by its Product ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/data.ProductResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/data.Message"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/data.Message"
                         }
@@ -122,10 +241,10 @@
         }
     },
     "definitions": {
-        "data.LoginResponseData": {
+        "data.BuyerLoginResponseData": {
             "type": "object",
             "properties": {
-                "buid": {
+                "buyer_id": {
                     "type": "string"
                 },
                 "email": {
@@ -137,6 +256,45 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "data.ProductResponseData": {
+            "type": "object",
+            "required": [
+                "condition",
+                "desc",
+                "posted_date",
+                "price",
+                "product_id",
+                "product_type",
+                "seller_id",
+                "title"
+            ],
+            "properties": {
+                "condition": {
+                    "type": "integer"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "posted_date": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "product_type": {
+                    "type": "string"
+                },
+                "seller_id": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
